--- a/firebase.json
+++ b/firebase.json
@@ -5,8 +5,8 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "npm --prefix functions run lint",
+      "npm --prefix functions run build"
     ],
     "source": "functions"
   },
@@ -18,10 +18,10 @@
       "**/node_modules/**"
     ],
     "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+	  {
+		"source": "/benchmark1{, /**}",
+		"destination": "/benchmark1/index.html"
+	  }
     ]
   }
 }
